Add get_transactions_per_category
